--- a/Proiect pclp/index.html
+++ b/Proiect pclp/index.html
@@ -2,9 +2,16 @@
 
 <head>
     <title>ExploreRo</title> 
+    <link rel="icon" type="image/x-icon" href="/img/flag.jpg">
 </head>
 
 <body>
+    <nav>
+        <p>ExploreRo</p>
+    </nav>
+    <div>
+        da
+    </div>
 </body>
 
 </html>
