--- a/Proiect pclp/index.html
+++ b/Proiect pclp/index.html
@@ -2,16 +2,56 @@
 
 <head>
     <title>ExploreRo</title> 
-    <link rel="icon" type="image/x-icon" href="/img/flag.jpg">
+    <link rel="icon" type="image/x-icon" href="/src/img/flag.jpg">
+
+    <!-- face conexiunea cu un api google pentru fonturi si le face disponibile pe pagina aceasta web -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="/src/style.css">
+    <script src="/src/script.js" defer></script>
 </head>
 
 <body>
-    <nav>
-        <p>ExploreRo</p>
-    </nav>
-    <div>
-        da
-    </div>
-</body>
 
+    <nav>
+        <a href="/"><p>Exploreaza Romania</p></a>
+        <div>
+            <button class="hamburger" id="hamburger"><img src="/src/img/hamburger.png" draggable="false"></button>
+        </div>
+    </nav>
+
+    <div class="edge" id="edge" style="right: -400px;">
+        <a href="/">Home</a>
+        <a href="/trasee">Trasee</a>
+        <a href="/orase">Orase</a>
+        <a href="/Ariana">Ariana</a>
+    </div>
+
+    <div class="content">
+        <p class="title">Romania, dulce tara!</p>
+        <p class="descr">Calatoreste cu ajutorul nostru</p>
+        <div class="butoane">
+            <a href="./#Desprenoi">Despre noi</a>
+            <a href="./trasee/">Trasee</a>
+            <a href="./orase/">Orase</a>
+            <a href="./Ariana/">Ariana</a>
+        </div>
+    </div>
+
+  <main>
+    <p id="Desprenoi">
+    <p class="main-title">Despre noi</p>
+    <p class="main-content">
+        Vrei sa incepi sa vizitezi Romania si nu stii de unde? Noi o sa te indrumam in calatoria ta. Aici gasesti liste cu orase, trasee montane,
+        activitati si toate obiectivele turistice importante, care merita vizitate. Ne dorim sa promovam aceasta tara spectaculoasa.
+    </p>
+  </main>
+
+<footer>
+    ExploreRo © 2023 - 2024. Toate Drepturile Rezervate
+</footer>
+   
+</body>
 </html>
