--- a/Proiect pclp/src/regiuni.html
+++ b/Proiect pclp/src/regiuni.html
@@ -22,7 +22,7 @@
         <div class="edge" id="edge" style="right: -400px;">
             <a href="index.html">Home</a>
             <a href="/trasee">Trasee</a>
-            <a href="regiuni.html">Regiuni</a>
+            <a href="src/regiuni.html">Regiuni</a>
             <a href="/Ariana">Ariana</a>
         </div>
     
@@ -32,7 +32,7 @@
             <div class="butoane">
                 <a href="./#Desprenoi">Despre noi</a>
                 <a href="./trasee/">Trasee</a>
-                <a href="regiuni.html">Regiuni</a>
+                <a href="src/regiuni.html">Regiuni</a>
                 <a href="./Ariana/">Ariana</a>
             </div>
         </div>
