--- a/Proiect pclp/regiuni.html
+++ b/Proiect pclp/regiuni.html
@@ -20,7 +20,7 @@
         </nav>
     
         <div class="edge" id="edge" style="right: -400px;">
-            <a href="/">Home</a>
+            <a href="index.html">Home</a>
             <a href="/trasee">Trasee</a>
             <a href="regiuni.html">Regiuni</a>
             <a href="/Ariana">Ariana</a>
@@ -35,6 +35,20 @@
                 <a href="regiuni.html">Regiuni</a>
                 <a href="./Ariana/">Ariana</a>
             </div>
+        </div>
+        <div class="harta">
+            <img src="../src/img/regiunile.jpeg" usemap="#image-map">
+<map name="image-map">
+    <area alt="Transilvania" title="Transilvania" href="index.html" coords="271,184,84" shape="circle"></area>
+	<area alt="Bucovina" title="Bucovina" href="index.html" coords="349,84,31" shape="circle"></area>
+	<area alt="Maramures" title="Maramures" href="index.html" coords="179,59,296,92" shape="rect"></area>
+	<area alt="Crisana" title="Crisana" href="index.html" coords="173,83,55,213" shape="rect"></area>
+    <area alt="Banat" title="Banat" href="index.html" coords="101,268,51" shape="circle"></area>
+    <area alt="Oltenia" title="Oltenia" href="index.html" coords="262,295,160,428" shape="rect"></area>
+    <area alt="Muntenia" title="Muntenia" href="index.html" coords="272,284,497,388" shape="rect"></area>
+    <area alt="Dobrogea" title="Dobrogea" href="index.html" coords="511,290,607,427" shape="rect"></area>
+    <area alt="Moldova" title="Moldova" href="index.html" coords="368,119,513,263" shape="rect"></area>
+</map>
         </div>
     </body>
 </html>
