--- a/Proiect pclp/index.html
+++ b/Proiect pclp/index.html
@@ -25,7 +25,7 @@
     <div class="edge" id="edge" style="right: -400px;">
         <a href="index.html">Home</a>
         <a href="/trasee">Trasee</a>
-        <a href="/regiuni">Regiuni</a>
+        <a href="scr/regiuni.html">Regiuni</a>
         <a href="/Ariana">Ariana</a>
     </div>
 
@@ -35,7 +35,7 @@
         <div class="butoane">
             <a href="./#Desprenoi">Despre noi</a>
             <a href="./trasee/">Trasee</a>
-            <a href="./regiuni/">Regiuni</a>
+            <a href="src/regiuni.html">Regiuni</a>
             <a href="./Ariana/">Ariana</a>
         </div>
     </div>
