--- a/Proiect pclp/index.html
+++ b/Proiect pclp/index.html
@@ -23,10 +23,10 @@
     </nav>
 
     <div class="edge" id="edge" style="right: -400px;">
-        <a href="index.html">Home</a>
+        <a href="/">Home</a>
         <a href="/trasee">Trasee</a>
-        <a href="scr/regiuni.html">Regiuni</a>
-        <a href="/Ariana">Ariana</a>
+        <a href="/orase">Orase</a>
+        <a href="/Ariana">Mini Joc</a>
     </div>
 
     <div class="content">
@@ -35,8 +35,8 @@
         <div class="butoane">
             <a href="./#Desprenoi">Despre noi</a>
             <a href="./trasee/">Trasee</a>
-            <a href="src/regiuni.html">Regiuni</a>
-            <a href="./Ariana/">Ariana</a>
+            <a href="./orase/">Orase</a>
+            <a href="./Ariana/">Mini Joc</a>
         </div>
     </div>
 
